<resources>
    <string name="app_name">AppPoke</string>
    <string name="volverAlola">Volver</string>
    <string name="infoAlola">La región de Alola está basada en Hawái y se trata de un archipiélago formado por cuatro islas naturales con su propia pokédex: Melemele, Akala, Ula-Ula y Poni, también cuenta con una isla artificial, el Paraíso Æther. En esta región transcurren los videojuegos de séptima generación, Pokémon Sol y Pokémon Luna y sus ediciones superiores Pokémon Ultrasol y Pokémon Ultraluna.</string>
    <string name="volverArchi7">Volver</string>
    <string name="volverGalar">Volver</string>
    <string name="infoGalar">La región de Galar está basada en Gran Bretaña (Reino unido), presentando distintas estéticas relacionadas con este país. Es el escenario de los videojuegos de octava generación, Pokémon Espada y Pokémon Escudo.</string>
    <string name="volverHoenn">Volver</string>
    <string name="infoHoenn">La región de Hoenn esta basada en Kyūshū. En esta región transcurren los siguientes videojuegos: de tercera generación, Pokémon Rubí, Zafiro, Esmeralda, y de sexta generación, Rubí Omega y Zafiro Alfa.</string>
    <string name="volverJohto">Volver</string>
    <string name="ingoJohto">La región de Johto esta basada en Kinki y Tōkai. En esta región transcurren los siguientes videojuegos: de segunda generación, Pokémon Oro, Plata, Cristal y de cuarta generación, Oro HeartGold y Plata SoulSilver.</string>
    <string name="volverKalos">Volver</string>
    <string name="infoKalos">La región de Kalos está basada en Francia. En esta región transcurren los videojuegos de sexta generación, Pokémon X y Pokémon Y. La región está dividida en varias zonas a las que les corresponde una pokédex distinta: la zona centro, montaña y costa.</string>
    <string name="volverKanto">Volver</string>
    <string name="infoKanto">La región de Kanto esta basada en Kantō. En esta región transcurren los siguiente videojuegos: de primera generación, Pokémon Verde, Rojo, Azul y Amarillo, de segunda generación, Oro, Plata y Cristal, de tercera generación, Rojo Fuego y Verde Hoja, de cuarta generación, Oro HeartGold y Plata SoulSilver y de séptima generación, Pokémon: Let\'s Go, Pikachu! y Pokémon: Let\'s Go, Eevee!</string>
    <string name="botonRegiones">Regiones</string>
    <string name="botonPokedex">Pokedex</string>
    <string name="volverPaldea">Volver</string>
    <string name="infoPaldea">La región de Paldea está basada en España. En esta región transcurren los videojuegos de novena generación, Pokémon Escarlata y Pokémon Púrpura.</string>
    <string name="volverPokedex">Volver</string>
    <string name="botonPrimeraGen">Primera Generación</string>
    <string name="botonSegundaGen">Segunda Generación</string>
    <string name="botonTerceraGen">Tercera Generación</string>
    <string name="volverDetalles">Volver</string>
    <string name="volverPrimeraGen">Volver</string>
    <string name="caberaTablaNumero">Número</string>
    <string name="cabeceraTablaNombre">Nombre</string>
    <string name="cabeceraTablaRegion">Región</string>
    <string name="volverRegiones">Volver</string>
    <string name="botonKanto">Kanto</string>
    <string name="botonJohto">Johto</string>
    <string name="botonHoenn">Hoenn</string>
    <string name="botonShinnoh">Sinnoh</string>
    <string name="botonTeselia">Teselia</string>
    <string name="botonKalos">Kalos</string>
    <string name="botonAlola">Alola</string>
    <string name="botonPaldea">Paldea</string>
    <string name="volverSegundaGen">Volver</string>
    <string name="cabeceraTablaNumero2">Número</string>
    <string name="cabeceraTablaNombre2">Nombre</string>
    <string name="cabeceraTablaRegion2">Región</string>
    <string name="volverShinnoh">Volver</string>
    <string name="infoShinnoh">La región de Sinnoh está basada en Hokkaidō. En esta región transcurren los siguientes videojuegos: de cuarta generación, Pokémon Diamante, Perla y Platino, y de octava generación, Pokémon Diamante Brillante, Perla Reluciente y Leyendas Pokémon: Arceus. Antiguamente se la conocía como la región de Hisui.</string>
    <string name="volverTerceraGen">Volver</string>
    <string name="cabeceraTablaNumero3">Número</string>
    <string name="cabeceraTablaNombre3">Nombre</string>
    <string name="cabeceraTablaRegion3">Región</string>
    <string name="volverTeselia">Volver</string>
    <string name="infoTeselia">La región de Teselia está basada en Nueva York. En esta región transcurren los videojuegos de quinta generación, Pokémon Negro y Blanco y sus secuelas Pokémon Negro 2 y Blanco 2.</string>
    <string name="cabeceraTablaDanioRecibido">Daño Recibido</string>
    <string name="cabeceraTablaTipos">Tipos</string>
    <string name="filaTablax4">x4</string>
    <string name="filaTablax2">x2</string>
    <string name="filaTablax1">x1</string>
    <string name="filaTablax1_2">x1/2</string>
    <string name="filaTabla1_4">x1/4</string>
    <string name="filaTablax0">x0</string>
    <string name="botonJuegos">Juegos</string>
    <string name="botonSegundaGenJuegos">Segunda Generacion</string>
    <string name="botonPrimeraGenJuegos">Primera Generacion\n</string>
    <string name="volverJuegos">Volver\n</string>
    <string name="volverJuegosPrimera">Volver\n</string>
    <string name="infoPrimeraGen">La primera generación fue el comenzo de todo, dió pie a todo lo que ha venido hasta día de hoy, esta compuesta por los siguientes juegos:</string>
    <string name="volverJuegosSegunda">Volver\n</string>
    <string name="caratulaPokemonRojo">caratulaPokemonRojo</string>
    <string name="caratulaPokemonVerde">caratulaPokemonVerde</string>
    <string name="caratulaPokemonAzul">caratulaPokemonAzul</string>
    <string name="fotoGameplayPrimeraGen">Asi se veian estos tres videojuegos:</string>
    <string name="fotoGameplayRojo">fotoGameplayRojo</string>
    <string name="descPrimeraGen">Pokémon Rojo y Pokémon Verde (ポケットモンスター 赤 Pocket Monsters Aka y ポケットモンスター 緑 Pocket Monsters Midori en japonés) son los primeros videojuegos de Pokémon de la historia, el primer paso que dio esta saga para convertirse en lo que es hoy en día. Pokémon Verde salió junto a Pokémon Rojo en 1996 para la consola portátil de la época, Game Boy. Estos videojuegos nunca salieron de Japón, en el resto del mundo Pokémon Azul fue la encargada de acompañar a Pokémon Rojo.\n\nCabe destacar que Pokémon Azul no es Pokémon Verde con un nombre diferente, sino que es una edición especial y, debido a las mejoras introducidas (sobre todo a nivel gráfico, ya que los gráficos de Rojo y Verde eran algo simplones para la capacidad de la Game Boy), se decidió que fuera la edición acompañante de Pokémon Rojo en el mercado occidental (a la edición Roja occidental también se le añadió las mejoras de Azul). La edición Azul se creó con el propósito de satisfacer a los consumidores que pedían más Pokémon.\n</string>
    <string name="pokemonOccidental">Debido al éxito del videojuego en Japón, salieron las versiones occidentales de los primeros juegos, conocidos ya por el nombre de Pokemon.</string>
    <string name="fotoCaratulaPokemonRojoOcc">fotoCaratulaPokemonRojoOcc</string>
    <string name="fotoCaratulaPokemonAzulOcc">fotoCaratulaPokemonAzulOcc</string>
    <string name="infoPokAmarillo">Dos años despues, salió el Pokemon Amarillo, a diferencia de los tres anteriores está basado en el anime, por lo que unicamente se podrá escoger a Pikachu como Pokemon inicial, no obstante, en esta versión podrás capturar a los tres iniciales sin excepción a lo largo de la historia, ya como lo consigue Ash en la serie.</string>
    <string name="caratulaPokemonAmarillo">caratulaPokemonAmarillo</string>
    <string name="caratulaPokemonAmarilloOcc">caratulaPokemonAmarilloOcc</string>
    <string name="fotoGameplayPrimeragenAmarillo">A diferencia de los anteriores, Pikachu te sigue fuera de su pokeball asi como en el anime.\n</string>
    <string name="fotoGameplayAmarillo">fotoGameplayAmarillo</string>
    <string name="botonGalarHisui">Galar/Hisui\n</string>
    <string name="botonCuartaGen">Cuarta Generacion</string>
    <string name="botonQuintaGen">Quinta Generacion</string>
    <string name="botonSextaGen">Sexta Generacion</string>
    <string name="botonSeptimaGen">Septima Generacion</string>
    <string name="botonOctavaGen">Octava Generacion</string>
    <string name="botonNovenaGen">Novena Generacion</string>
    <string name="botonTipos">Tipos</string>
    <string name="volverJuegosTercera">Volver</string>
    <string name="infoTerceraGen">Pokémon Rubí y Pokémon Zafiro (Pokémon Ruby y Pokémon Sapphire en inglés, ポケットモンスター ルビー Pocket Monsters Ruby y ポケットモンスター サファイア Pocket Monsters Sapphire en japonés) son los primeros videojuegos de Pokémon de la tercera generación. También llamados \"Pokémon Edición Rubí\" y \"Pokémon Edición Zafiro\", aparecieron en español el 25 de julio de 2003, siendo las primeras ediciones de Pokémon para Game Boy Advance, contando así con una calidad gráfica superior a sus antiguas ediciones y novedades en lo que se refiere al entrenamiento de los Pokémon, una región nueva, Hoenn, y también nuevos Pokémon, en concreto 135 nuevas especies. La reedición de estas fue Pokémon Esmeralda. El día 7 de mayo de 2014, Nintendo anunció el lanzamiento de los remakes de esta generación, Pokémon Rubí Omega y Pokémon Zafiro Alfa, para noviembre del mismo año.\n</string>
    <string name="caratulaPokemonRubi">caratulaPokemonRubi</string>
    <string name="infoRojoFuegoVerdeHoja">Pokémon Rojo Fuego y Pokémon Verde Hoja (Pokémon FireRed y Pokémon LeafGreen en inglés, ポケットモンスター ファイアレッド Pocket Monsters FireRed y ポケットモンスター リーフグリーン Pocket Monsters LeafGreen en japonés) son las ediciones reeditadas de los videojuegos originales Pokémon Rojo y Pokémon Verde (Rojo y Azul fuera de Japón), con las novedades de los videojuegos para Game Boy Advance de Pokémon Rubí y Pokémon Zafiro. También llamados \"Pokémon Edición Rojo Fuego\" y \"Pokémon Edición Verde Hoja\", ambas ediciones fueron lanzadas a las tiendas europeas el 1 de octubre de 2004.\n</string>
    <string name="caratulaPokemonZafiro">caratulaPokemonZafiro</string>
    <string name="caratulaPokemonRojoFuego">caratulaPokemonRojoFuego</string>
    <string name="caratulaPokemonVerdeHoja">caratulaPokemonVerdeHoja</string>
    <string name="infoEsmeralda">Pokémon Esmeralda (Pokémon Emerald en inglés, ポケットモンスター エメラルド Pocket Monsters Emerald en japonés) es la edición superior que cierra la tercera generación iniciada por Pokémon Rubí y Pokémon Zafiro. También llamado \"Pokémon Edición Esmeralda\", en ella nos adentrábamos en la 3ª generación, en la cual 135 nuevos Pokémon nos acechaban. Era un gran paso de la Game Boy Color a la Game Boy Advance. Básicamente este es igual al anterior, pero añadiéndose un montón de novedades e información que hacen que el videojuego sea aún más completo.\n</string>
    <string name="caratulaPokemonEsmeralda">caratulaPokemonEsmeralda</string>
    <string name="gameplayPokemonRubi">Asi se ven estos videojuegos:\n</string>
    <string name="gameplayPokemonRubiZafiro">gameplayPokemonRubiZafiro</string>
    <string name="botonQuintaGenJuegos">Quinta Generacion</string>
    <string name="botonCuartaGenJuegos">Cuarta Generacion</string>
    <string name="botonTerceraGenJuegos">Tercera Generacion</string>
    <string name="gameplayPokemonRojoFuego">Asi se ven estos videojuegos:</string>
    <string name="gameplayPokemonRojoFuegoVerdeHoja">gameplayPokemonRojoFuegoVerdeHoja</string>
    <string name="gameplayPokemonEsmeralda">Esta es la visual del videojuego:</string>
    <string name="gameplayPokemonSsmerald">gameplayPokemonEsmerald</string>
</resources>