<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    tools:context=".MenuActivity">
    <!--android:background="@drawable/fondo_menu"-->


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="AppPoke"
        android:textSize="24sp"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/btnPokedexApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/botonPokedex"/>

    <Button
        android:id="@+id/btnRegionesApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/botonRegiones"/>

    <Button
        android:id="@+id/btnJuegosApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/botonJuegos"/>

    <Button
        android:id="@+id/btnTiposApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/botonTipos"/>

</LinearLayout>